<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group>
    <item
      android:id="@+id/sync_status"
      android:icon="@drawable/ic_history"
      android:title="@string/sync_status" />
    <item
      android:id="@+id/nav_offline_areas"
      android:icon="@drawable/cloud_off"
      android:title="@string/offline_map_imagery" />
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/ic_settings"
      android:title="@string/settings" />
    <item
      android:id="@+id/about"
      android:icon="@drawable/info_outline"
      android:title="@string/about" />
    <item
      android:id="@+id/terms_of_service"
      android:icon="@drawable/feed"
      android:title="@string/terms_of_service" />
  </group>
  <group android:id="@+id/nav_footer">
    <item
      android:id="@+id/nav_log_version"
      android:title="" />
  </group>
</menu>
