<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2019 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <variable
      name="viewModel"
      type="org.groundplatform.android.ui.offlineareas.OfflineAreasViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceContainer"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/offline_areas_toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:navigationIcon="@drawable/ic_arrow_back"
      app:title="@string/offline_map_imagery" />
    <LinearLayout
      android:id="@+id/offline_area_list_heading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="8dp"
      android:orientation="vertical"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@id/offline_areas_toolbar"
      app:visible="@{viewModel.showList}">
      <TextView
        android:id="@+id/offline_areas_list_title"
        style="@style/TextAppearance.App.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline_downloaded_areas" />
      <TextView
        android:id="@+id/offline_areas_list_tip"
        style="@style/TextAppearance.App.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline_area_list_tip"
        android:textColor="?attr/colorOnSurfaceVariant" />
    </LinearLayout>

    <androidx.compose.ui.platform.ComposeView
      android:id="@+id/offline_areas_list_compose_view"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="16dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/offline_area_list_heading"
      app:visible="@{viewModel.showList}" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
      android:id="@+id/floatingActionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/map_btn_margin_bottom"
      android:clickable="true"
      android:contentDescription="@string/offline_area_selector_prompt"
      android:focusable="true"
      android:onClick="@{() -> viewModel.showOfflineAreaSelector()}"
      android:text="@string/offline_area_selector_select"
      app:icon="@drawable/ic_maps_ar"
      app:iconTint="?attr/colorOnPrimaryContainer"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
    <ImageView
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:contentDescription="@string/offline_map_imagery_no_areas_downloaded_image"
      app:layout_constraintBottom_toTopOf="@+id/no_areas_downloaded_message"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/offline_map_imagery"
      app:visible="@{viewModel.showNoAreasMessage}" />
    <TextView
      android:id="@+id/no_areas_downloaded_message"
      style="@style/TextAppearance.App.BodyMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/offline_area_selector_prompt"
      android:paddingTop="16dp"
      android:text="@string/no_basemaps_downloaded"
      android:textAlignment="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:visible="@{viewModel.showNoAreasMessage}" />
    <ProgressBar
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:visible="@{viewModel.showProgressSpinner}" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
