<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2021 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
      name="viewModel"
      type="com.google.android.ground.ui.tos.TermsOfServiceViewModel" />
    <variable
      name="isViewOnly"
      type="Boolean" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.tos.TermsOfServiceFragment">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/terms_toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:title="@string/tos_title" />

    <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="16dp"
      android:fillViewport="true"
      android:fitsSystemWindows="true"
      android:scrollbars="vertical"
      app:layout_constraintBottom_toTopOf="@+id/agreeCheckBox"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/terms_toolbar">

      <TextView
        android:id="@+id/termsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@{viewModel.termsOfServiceText}"
        android:visibility="visible" />
    </ScrollView>
    <Button
      android:id="@+id/agreeButton"
      visible="@{!isViewOnly}"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:enabled="@{viewModel.agreeCheckboxChecked}"
      android:onClick="@{() -> viewModel.onButtonClicked()}"
      android:text="@string/agree_terms"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
    <CheckBox
      android:id="@+id/agreeCheckBox"
      visible="@{!isViewOnly}"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:checked="@={viewModel.agreeCheckboxChecked}"
      android:text="@string/agree_checkbox"
      app:layout_constraintBottom_toTopOf="@id/agreeButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
